# OpenW3D

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
Code/: CMakeLists.txt
Code/Combat/: CMakeLists.txt  SoundEnvironment.cpp  WeatherMgr.cpp  action.cpp  backgroundmgr.cpp  building.cpp  bullet.cpp  c4.cpp  ccamera.cpp  cinematicgameobj.cpp  combat.cpp  combat.h  combatdazzle.cpp  conversationmgr.cpp  doors.cpp  effectrecycler.cpp  elevator.cpp  explosion.cpp  mendozabossgameobj.cpp  physicalgameobj.cpp  raveshawbossgameobj.cpp  refinerygameobj.cpp  repairbaygameobj.cpp  sakurabossgameobj.cpp  scriptcommands.cpp  scriptzone.cpp  smartgameobj.cpp  soldier.cpp  staticnetworkobject.cpp  surfaceeffects.cpp  transition.cpp  unitcoordinationzonemgr.cpp  vehicle.cpp  vehicledriver.cpp  vehiclefactorygameobj.cpp  warfactorygameobj.cpp  weapons.cpp  weaponview.cpp
Code/Commando/: WINMAIN.CPP  clienthintmanager.cpp  combatgmode.cpp  console.cpp  consolefunction.cpp  dialogtests.cpp  dlgconfigperformancetab.cpp  dlgevamaptab.cpp  gameinitmgr.cpp  gamemode.cpp  init.cpp  level.cpp  messages.cpp  multihud.cpp  shutdown.cpp  systemsettings.cpp  useroptions.cpp
Code/Tools/: CMakeLists.txt
Code/Tools/LevelEdit/: CMakeLists.txt  DdbJsonMirror.cpp  DdbJsonMirror.h  FileMgr.cpp  GitAssetDatabase.cpp  GitAssetDatabase.h  LevelEdit.cpp  LevelEditDoc.cpp  LevelEditView.cpp  PresetsLibForm.cpp  RegKeys.h  editorbuild.h  mixfiledatabase.cpp
Code/Tools/LevelEditDbMirror/: CMakeLists.txt  main.cpp
Code/Tools/LevelEditQt/: ActionStateModel.cpp  ActionStateModel.h  CMakeLists.txt  CommandIds.h  CommandRouter.cpp  CommandRouter.h  ConfigSettings.cpp  ConfigSettings.h  DeviceSelectionDialog.cpp  DeviceSelectionDialog.h  FeatureProfile.cpp  FeatureProfile.h  LevelEditViewport.cpp  LevelEditViewport.h  MainWindow.cpp  MainWindow.h  RuntimeSession.cpp  RuntimeSession.h  SettingsBridge.cpp  SettingsBridge.h  main.cpp  resources.qrc
Code/Tools/LevelEditQt/Docks/: AmbientLightDock.cpp  AmbientLightDock.h  CameraSettingsDock.cpp  CameraSettingsDock.h  OutputDock.cpp  OutputDock.h
Code/Tools/LevelEditQt/Panels/: ConversationsPanel.cpp  ConversationsPanel.h  HeightfieldPanel.cpp  HeightfieldPanel.h  InstancesPanel.cpp  InstancesPanel.h  OverlapPanel.cpp  OverlapPanel.h  PresetsPanel.cpp  PresetsPanel.h
Code/Tools/LevelEditQt/Parity/: CommandParityManifest.json
Code/Tools/QtCommon/: CMakeLists.txt  ShortcutHelpers.cpp  ShortcutHelpers.h
Code/Tools/W3DViewQt/: AddToLineupDialog.cpp  AddToLineupDialog.h  AdvancedAnimationDialog.cpp  AdvancedAnimationDialog.h  AggregateNameDialog.cpp  AggregateNameDialog.h  AnimatedSoundOptionsDialog.cpp  AnimatedSoundOptionsDialog.h  AnimationPropertiesDialog.cpp  AnimationPropertiesDialog.h  BackgroundObjectDialog.cpp  BackgroundObjectDialog.h  BoneManagementDialog.cpp  BoneManagementDialog.h  CMakeLists.txt  CameraDistanceDialog.cpp  CameraDistanceDialog.h  CameraSettingsDialog.cpp  CameraSettingsDialog.h  EmitterEditDialog.cpp  EmitterEditDialog.h  GammaDialog.cpp  GammaDialog.h  HierarchyPropertiesDialog.cpp  HierarchyPropertiesDialog.h  KeyframeTableUtils.cpp  KeyframeTableUtils.h  MainWindow.cpp  MainWindow.h  MeshPropertiesDialog.cpp  MeshPropertiesDialog.h  OpacityVectorEditDialog.cpp  OpacityVectorEditDialog.h  PlaySoundDialog.cpp  PlaySoundDialog.h  RenderObjUtils.cpp  RenderObjUtils.h  ResolutionDialog.cpp  ResolutionDialog.h  RingEditDialog.cpp  (+12 more)
Code/Tools/WDumpCore/: CMakeLists.txt  wdump_core.cpp  wdump_core.h
Code/Tools/WDumpQt/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
Code/Tools/WWConfig/: CMakeLists.txt  DriverVersionWarning.cpp  PerformanceConfigDialog.cpp  WWConfig.cpp  WWConfigSettings.cpp  WWConfigSettings.h
Code/Tools/WWConfigQt/: AudioPage.cpp  AudioPage.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  PerformancePage.cpp  PerformancePage.h  VideoPage.cpp  VideoPage.h  WWConfigBackend.cpp  WWConfigBackend.h  main.cpp
Code/Tools/wdump/: CMakeLists.txt  chunk_d.cpp  rawfilem.cpp  wdlview.cpp
Code/WWAudio/: CMakeLists.txt  WWAudio.cpp
Code/WWAudio/openal/: FFMpegBuffer.h  OpenALAudio.h  OpenALHandle.cpp  OpenALHandle.h
Code/ww3d2/: CMakeLists.txt  dazzle.cpp  decalmsh.cpp  dx8wrapper.cpp  mesh.cpp  robjlist.h
Code/wwdebug/: CMakeLists.txt
Code/wwlib/: CMakeLists.txt  Except.cpp  FFmpegFile.cpp  ffactory.cpp  openw3d.cpp  openw3d.h
Code/wwphys/: CMakeLists.txt  Path.cpp  PathDebugPlotter.cpp  PathDebugPlotter.h  Pathfind.cpp  PathfindSectorBuilder.cpp  animcollisionmanager.cpp  dynamicaabtreecull.cpp  dynamicaabtreecull.h  dynamicphys.cpp  dynamicshadowmanager.cpp  grideffect.cpp  heightdb.cpp  humanphys.cpp  lightcull.cpp  lightphys.cpp  lightsolve.cpp  movephys.cpp  octbox.cpp  pathsolve.cpp  phys.cpp  phys.h  phys3.cpp  physaabtreecull.cpp  physaabtreecull.h  physdecalsys.cpp  physdynamicsavesystem.cpp  physgridcull.cpp  physgridcull.h  physresourcemgr.cpp  physstaticsavesystem.cpp  phystexproject.cpp  projectile.cpp  projectormanager.cpp  pscene.cpp  pscene.h  pscene_collision.cpp  pscene_decal.cpp  pscene_lighting.cpp  pscene_projectors.cpp  (+19 more)
Code/wwsaveload/: CMakeLists.txt
cmake/: bink.cmake  crunch.cmake  gamespy.cmake  miles.cmake  qt_tools.cmake
