# Top Level CMake for building SDK tools.
add_subdirectory(MakeMix)
add_subdirectory(RenRem)

add_subdirectory(MixViewer)
add_subdirectory(W3DView)
add_subdirectory(LevelEdit)
add_subdirectory(WWConfig)
add_subdirectory(WDumpCore)
if(WIN32)
    add_subdirectory(wdump)
endif()

if(W3D_BUILD_QT_TOOLS)
    add_subdirectory(QtCommon)
    add_subdirectory(WWConfigQt)
    add_subdirectory(WDumpQt)
    if(WIN32)
        add_subdirectory(W3DViewQt)
    endif()
endif()
